# Venom

./: COMMANDS.md  README.md  WORKFLOW.md  pyproject.toml
provisioning/: 80-venom-bluetooth.conf  control.sh  install-firstboot.sh  pipewire-system.service  prepare-pendrive.ps1  provision.sh  venom-control.path  venom-control.service  venom-dbus-bluetooth.conf  venom-provision.service  venom-shell.service  venom.service  venom.toml  wireplumber-system.service
src/venom/: __init__.py  __main__.py  btaudio.py  buttons.py  chess_game.py  config.py  live.py  location.py  music.py  notifications.py  phone.py  sdnotify.py  session.py  shell_server.py  status.py  stores.py  supervisor.py  tools_pi.py  voice.py  wake.py  web.py
src/venom/audio/: denoise.py  devices.py  routing.py  streams.py
src/venom/monitors/: audio.py  brain.py  network.py
tests/: conftest.py  test_audio.py  test_brain_resolver.py  test_btaudio.py  test_chess_game.py  test_config.py  test_location.py  test_notifications.py  test_persona.py  test_routing.py  test_status_and_supervisor.py  test_stores.py  test_voice_stack.py
