[project]
name = "venom"
version = "0.1.0"
description = "Venom — the Raspberry Pi wearable runtime of FLINT (appliance daemon)"
requires-python = ">=3.11"
# The monitoring core is stdlib-only; the voice assistant needs the extras.
dependencies = [
    "chess>=1.11",  # voice chess: board state, legality, SAN/UCI parsing
]

[project.optional-dependencies]
voice = [
    "flint-core",          # shared memory store, tool registry, LLM providers
    "google-genai>=1.0",   # Gemini Live audio sessions
    "requests>=2.31",
    "sounddevice>=0.5",
    "numpy>=1.26,<2.5",
    # On Linux, openwakeword hard-requires tflite-runtime, which has no
    # wheels for modern Python — provision.sh installs it there with
    # --no-deps instead. Declared only where it resolves cleanly.
    'openwakeword>=0.6; platform_system == "Windows"',
    "onnxruntime>=1.20,<1.22",
]

[project.scripts]
venom = "venom.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["venom", "flint_core"]
